@@ -98,6 +98,7 @@ wxMSW:
 
 - Fixed version script problems when using configure with cygwin/mingw32.
 - Use system default paper size for printing instead of A4
+- Fix colours when converting wxBitmap with alpha to wxImage (nusi)
 
 2.7.2
 -----
